; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_mime.c_add_content_type.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_mime.c_add_content_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Content-Type: %s%s%s\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"; boundary=\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.curl_slist**, i8*, i8*)* @add_content_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_content_type(%struct.curl_slist** %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.curl_slist**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.curl_slist** %0, %struct.curl_slist*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.curl_slist**, %struct.curl_slist*** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i8*, i8** %6, align 8
  br label %18

17:                                               ; preds = %3
  br label %18

18:                                               ; preds = %17, %15
  %19 = phi i8* [ %16, %15 ], [ getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0), %17 ]
  %20 = call i32 @Curl_mime_add_header(%struct.curl_slist** %7, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %12, i8* %19)
  ret i32 %20
}

declare dso_local i32 @Curl_mime_add_header(%struct.curl_slist**, i8*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
